--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  marquee: ^2.2.3
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
